add docs for creation of signing config

--- a/content/data/esign/overview.mdx
+++ b/content/data/esign/overview.mdx
@@ -9,9 +9,9 @@ visible_in_sidebar: true
 
 ### What is eSign?
 
-Our eSign APIs enable easy collection of Aadhaar based electronic signatures that are legally enforceable. This is built on top of NSDL’s infrastructure and is fully privacy compliant.
+Our eSign APIs enable easy collection of Aadhaar based electronic signatures that are legally enforceable. This is built on top of NSDL and emudra infrastructure and is fully privacy compliant.
 
-We also provide ready-to-use screens built on top of NSDL’s. These can be easily themed as per your brand colours and logo, and can be loaded inside your app as a webview or redirected to via your website.
+We also provide ready-to-use screens built on top of NSDL/emudra. These can be easily themed as per your brand colours and logo, and can be loaded inside your app as a webview or redirected to via your website.
 
 <hr class="primary" />
 
