--- a/content/data/esign/flexiEsign.mdx
+++ b/content/data/esign/flexiEsign.mdx
@@ -5,12 +5,14 @@ order: 3
 visible_in_sidebar: true
 ---
 
-
 ## Signing config creation
+
 <p>
-The signing config is a JSON that specifies on which pages and at what coordinates the specific<br/>
-user has to sign. The size of the signer's rectangle. 
-<br/>
+  The signing config is a JSON that specifies on which pages and at what
+  coordinates the specific
+  <br />
+  user has to sign. The size of the signer's rectangle.
+  <br />
 </p>
 
 - SigningConfig allow you to sing at multiple places on same page.
@@ -20,16 +22,16 @@ user has to sign. The size of the signer's rectangle.
 ### Understanding the config Schema
 
 <Row>
-<Portion desktopSpan="whole">
-        <Tabs
+  <Portion desktopSpan="whole">
+    <Tabs
       tabs={[
         {
           key: "1",
           label: "exaple config",
           content: (
             <>
-<CodeBlockWithCopy language="json">
-    {`{
+              <CodeBlockWithCopy language="json">
+                {`{
   "signers": [
     {
       "optional": false,
@@ -56,37 +58,39 @@ user has to sign. The size of the signer's rectangle.
     }
   ]
 }`}
-</CodeBlockWithCopy>
-</>
-),
-        }, ]}
-    >
-    </Tabs>
-</Portion>
+              </CodeBlockWithCopy>
+            </>
+          ),
+        },
+      ]}
+    ></Tabs>
+  </Portion>
 </Row>
 
-- The signers array specifies the config for each signer. Each signer config has information about what pages and coordinates the specific signer has to sign. 
+- The signers array specifies the config for each signer. Each signer config has information about what pages and coordinates the specific signer has to sign.
 - The above example indicates there is one signer. Who should sign at `(x1:402, y1:53, x2:542, y2:93)` on pages 0 and 1. Assuming starting index as 0. On coordinate `(x1:358, y1:232, x2:498.53, y2:272)` on page 2.
 - The coordinates are the lower left and upper right of the diagonal of the sign rectangle.
 - The config can be used to get flexible configurations like one signer signs on multiple places on the same page with multiple signers in the overall configuration.
 - The `optional` field indicates whether the sign by that signer is required for completion of document.
 
-
 <hr class="tertiary" />
 
 ### Some examples.
 
-#### Multiple signers. Different pages same coordinate. 
+#### Multiple signers. Different pages same coordinate.
 
 <Callout type="tip">
-    Signer 1 signs at <code>(x1:402, y1:53, x2:542, y2:93)</code> on pages 0 and 1. 
-    <br/>Signers 2 signs at <code>(x1:402, y1:53, x2:542, y2: 93)</code> on pages 2 and 3.
+  Signer 1 signs at <code>(x1:402, y1:53, x2:542, y2:93)</code> on pages 0 and
+  1.
+  <br />
+  Signers 2 signs at <code>(x1:402, y1:53, x2:542, y2: 93)</code> on pages 2 and
+  3.
 </Callout>
 
-<br/>
+<br />
 
 <Row>
-<Portion desktopSpan="whole">
+  <Portion desktopSpan="whole">
     <Tabs
       tabs={[
         {
@@ -94,8 +98,8 @@ user has to sign. The size of the signer's rectangle.
           label: "example 1",
           content: (
             <>
-<CodeBlockWithCopy language="json">
-    {`{
+              <CodeBlockWithCopy language="json">
+                {`{
   "signers": [
     {
       "optional": false,
@@ -127,37 +131,42 @@ user has to sign. The size of the signer's rectangle.
     }
   ]
 }`}
-</CodeBlockWithCopy>
-</>
-),
-        }, ]}
-    >
-    </Tabs>
-</Portion>
+              </CodeBlockWithCopy>
+            </>
+          ),
+        },
+      ]}
+    ></Tabs>
+  </Portion>
 </Row>
 
-<br/>
+<br />
 <hr class="tertiary" />
 
 #### Multiple signers, one signer multiple places on the same page
 
 <Callout type="tip">
-Signer 1 signs at <code>(x1:402, y1:53, x2:542, y2:93)</code> on pages 0 and 1. 
-<br/>Signer 1 signs at <code>(x1:358, y1:232, x2:498, y2:272)</code> on pages 0 and 1. 
-<br/>Signer 2 signs at <code>(x1:402, y1: 53, x2: 542, y2:93)</code> on pages 2 and 3.
+  Signer 1 signs at <code>(x1:402, y1:53, x2:542, y2:93)</code> on pages 0 and
+  1.
+  <br />
+  Signer 1 signs at <code>(x1:358, y1:232, x2:498, y2:272)</code> on pages 0 and
+  1.
+  <br />
+  Signer 2 signs at <code>(x1:402, y1: 53, x2: 542, y2:93)</code> on pages 2 and
+  3.
 </Callout>
 
 <Row>
-<Portion desktopSpan="whole">
-        <Tabs
+  <Portion desktopSpan="whole">
+    <Tabs
       tabs={[
         {
           key: "1",
           label: "example 2",
           content: (
             <>
-<CodeBlockWithCopy language="json">
-    {`{
+              <CodeBlockWithCopy language="json">
+                {`{
   "signers": [
     {
       "optional": false,
@@ -198,15 +207,14 @@ Signer 1 signs at <code>(x1:402, y1:53, x2:542, y2:93)</code> on pages 0 and 1.
     }
   ]
 }`}
-</CodeBlockWithCopy>
-</>
-),
-        }, ]}
-    >
-    </Tabs>
-</Portion>
+              </CodeBlockWithCopy>
+            </>
+          ),
+        },
+      ]}
+    ></Tabs>
+  </Portion>
 </Row>
-
 
 ## Upload signing config.
 
@@ -224,10 +232,14 @@ Signer 1 signs at <code>(x1:402, y1:53, x2:542, y2:93)</code> on pages 0 and 1.
                 request successfully.
               </p>
               <hr className="tertiary" />
-              <p>Upload the signing config to get the config id in response. <br/>
-                Remove line breaks from the JSON before uploading. <a hef="https://www.textfixer.com/tools/remove-line-breaks.php">(remove line break)</a>—
-                <br/>
-                </p>
+              <p>
+                Upload the signing config to get the config id in response.{" "}
+                <br />
+                Remove line breaks from the JSON before uploading. <a hef="https://www.textfixer.com/tools/remove-line-breaks.php">
+                  (remove line break)
+                </a>—
+                <br />
+              </p>
               <h5>Request</h5>
               <CodeBlockWithCopy language="json">
                 {`POST /api/signature/config
@@ -240,11 +252,12 @@ Signer 1 signs at <code>(x1:402, y1:53, x2:542, y2:93)</code> on pages 0 and 1.
               <p>You will get the following details—</p>
               <ul>
                 <li>
-                  Unique configId <code>id</code> which can be used to
-                  create signature request.
+                  Unique configId <code>id</code> which can be used to create
+                  signature request.
                 </li>
                 <li>
-                  The same comfigId can be used across multiple signature request using doc of one type.
+                  The same comfigId can be used across multiple signature
+                  request using doc of one type.
                 </li>
               </ul>
               <CodeBlockWithCopy language="json">
@@ -257,7 +270,8 @@ Signer 1 signs at <code>(x1:402, y1:53, x2:542, y2:93)</code> on pages 0 and 1.
               </CodeBlockWithCopy>
             </>
           ),
-        }, ]}
+        },
+      ]}
     ></Tabs>
   </Portion>
 </Row>
