--- a/content/data/bav/validate-vpa/quickstart.mdx
+++ b/content/data/bav/validate-vpa/quickstart.mdx
@@ -39,14 +39,15 @@ Here are the URLs you would need for this integration—
                                     shape="rounded"
                                     marginBottom="micro"
                                 >
-                                    <details>
+                                    <details open>
                                         <summary>
+                                            <Text size="medium" marginBottom="none" paddingRight="medium">
                                             <Badge type="success">
                                                 SUCCESS
                                             </Badge>{" "}
                                             Your request has a valid{" "}
                                             <code>VPA</code> and Setu has
-                                            processed your request successfully.
+                                            processed your request successfully.</Text>
                                         </summary>
                                         <hr className="tertiary" />
                                         <h5>Request</h5>
@@ -122,10 +123,10 @@ Here are the URLs you would need for this integration—
                                 >
                                     <details>
                                         <summary>
-                                            <Badge type="failure">ERROR</Badge>{" "}
+                                            <Text size="medium" marginBottom="none" paddingRight="medium"><Badge type="failure">ERROR</Badge>{" "}
                                             Setu has processed your request
                                             successfully but the request has an
-                                            invalid <code>VPA</code>.
+                                            invalid <code>VPA</code>.</Text>
                                         </summary>
                                         <hr className="tertiary" />
                                         <h5>Request</h5>
