--- a/content/data/esign/flexi-esign.mdx
+++ b/content/data/esign/flexi-esign.mdx
@@ -7,30 +7,16 @@ visible_in_sidebar: true
 
 ## Signing config creation
 
-<p>
-  The signing config is a JSON that specifies on which pages and at what
-  coordinates the specific
-  <br />
-  user has to sign. The size of the signer's rectangle.
-  <br />
-</p>
+The signing config is a JSON that specifies on which pages and at what coordinates the specific user has to sign. The size of the signer's rectangle.
 
-- SigningConfig allow you to sing at multiple places on same page.
+- Signing config allows you to sing at multiple places on same page.
 - Sign at multiple places on different pages.
 - Sign at any coordinate on a page.
 
-### Understanding the config Schema
+### Understanding the config schema
 
-<Row>
-  <Portion desktopSpan="whole">
-    <Tabs
-      tabs={[
-        {
-          key: "1",
-          label: "exaple config",
-          content: (
-            <>
-              <CodeBlockWithCopy language="json">
+
+<CodeBlockWithCopy language="json">
                 {`{
   "signers": [
     {
@@ -58,14 +44,8 @@ visible_in_sidebar: true
     }
   ]
 }`}
-              </CodeBlockWithCopy>
-            </>
-          ),
-        },
-      ]}
-    ></Tabs>
-  </Portion>
-</Row>
+</CodeBlockWithCopy>
+            
 
 - The signers array specifies the config for each signer. Each signer config has information about what pages and coordinates the specific signer has to sign.
 - The above example indicates there is one signer. Who should sign at `(x1:402, y1:53, x2:542, y2:93)` on pages 0 and 1. Assuming starting index as 0. On coordinate `(x1:358, y1:232, x2:498.53, y2:272)` on page 2.
@@ -75,13 +55,14 @@ visible_in_sidebar: true
 
 <hr class="tertiary" />
 
-### Some examples.
+### Examples
 
-#### Multiple signers. Different pages same coordinate.
+#### Multiple signers, different pages and same coordinates
 
 <Callout type="tip">
   Signer 1 signs at <code>(x1:402, y1:53, x2:542, y2:93)</code> on pages 0 and
   1.
+  <br />
   <br />
   Signers 2 signs at <code>(x1:402, y1:53, x2:542, y2: 93)</code> on pages 2 and
   3.
@@ -89,16 +70,7 @@ visible_in_sidebar: true
 
 <br />
 
-<Row>
-  <Portion desktopSpan="whole">
-    <Tabs
-      tabs={[
-        {
-          key: "1",
-          label: "example 1",
-          content: (
-            <>
-              <CodeBlockWithCopy language="json">
+<CodeBlockWithCopy language="json">
                 {`{
   "signers": [
     {
@@ -131,41 +103,29 @@ visible_in_sidebar: true
     }
   ]
 }`}
-              </CodeBlockWithCopy>
-            </>
-          ),
-        },
-      ]}
-    ></Tabs>
-  </Portion>
-</Row>
+</CodeBlockWithCopy>
+
 
 <br />
+
 <hr class="tertiary" />
 
-#### Multiple signers, one signer multiple places on the same page
+#### Multiple signers and one signer signs in multiple places on the same page
 
 <Callout type="tip">
   Signer 1 signs at <code>(x1:402, y1:53, x2:542, y2:93)</code> on pages 0 and
   1.
   <br />
+  <br />
   Signer 1 signs at <code>(x1:358, y1:232, x2:498, y2:272)</code> on pages 0 and
   1.
+  <br />
   <br />
   Signer 2 signs at <code>(x1:402, y1: 53, x2: 542, y2:93)</code> on pages 2 and
   3.
 </Callout>
 
-<Row>
-  <Portion desktopSpan="whole">
-    <Tabs
-      tabs={[
-        {
-          key: "1",
-          label: "example 2",
-          content: (
-            <>
-              <CodeBlockWithCopy language="json">
+<CodeBlockWithCopy language="json">
                 {`{
   "signers": [
     {
@@ -207,16 +167,9 @@ visible_in_sidebar: true
     }
   ]
 }`}
-              </CodeBlockWithCopy>
-            </>
-          ),
-        },
-      ]}
-    ></Tabs>
-  </Portion>
-</Row>
+</CodeBlockWithCopy>
 
-## Upload signing config.
+## Upload signing config
 
 <Row>
   <Portion desktopSpan="whole">
@@ -235,17 +188,17 @@ visible_in_sidebar: true
               <p>
                 Upload the signing config to get the config id in response.{" "}
                 <br />
-                Remove line breaks from the JSON before uploading. <a hef="https://www.textfixer.com/tools/remove-line-breaks.php">
+                The request body should be a continuos string. To achieve that, remove line breaks from the JSON before uploading. <a href="https://www.textfixer.com/tools/remove-line-breaks.php" target="_blank">
                   (remove line break)
-                </a>—
+                </a>
                 <br />
               </p>
               <h5>Request</h5>
               <CodeBlockWithCopy language="json">
                 {`POST /api/signature/config
-                { "signers": [ { "optional": false, "signRectangles": [ { "coordinate": { "lowerLeftX": 402, "lowerLeftY": 53, "upperRightX": 542, "upperRightY": 93 }, "pages": [ 0, 1 ] },
-                { "coordinate": { "lowerLeftX": 358, "lowerLeftY": 232, "upperRightX": 498.53009106595096, "upperRightY": 272.52901734104046 }, "pages": [ 2 ] } ] }, 
-                { "optional": false, "signRectangles": [ { "coordinate": { "lowerLeftX": 358, "lowerLeftY": 232, "upperRightX": 498.53009106595096, "upperRightY": 272.52901734104046 }, "pages": [ 0, 1 ] } ] } ] }`}
+{ "signers": [ { "optional": false, "signRectangles": [ { "coordinate": { "lowerLeftX": 402, "lowerLeftY": 53, "upperRightX": 542, "upperRightY": 93 }, "pages": [ 0, 1 ] },
+{ "coordinate": { "lowerLeftX": 358, "lowerLeftY": 232, "upperRightX": 498.53009106595096, "upperRightY": 272.52901734104046 }, "pages": [ 2 ] } ] }, 
+{ "optional": false, "signRectangles": [ { "coordinate": { "lowerLeftX": 358, "lowerLeftY": 232, "upperRightX": 498.53009106595096, "upperRightY": 272.52901734104046 }, "pages": [ 0, 1 ] } ] } ] }`}
               </CodeBlockWithCopy>
               <hr className="tertiary" />
               <h5>Response</h5>
@@ -278,4 +231,4 @@ visible_in_sidebar: true
 
 ### Flow of API calls
 
-Read more [here](./quickstart.mdx)
+Read more about the flow of API calls <a href="/data/esign/quickstart">here</a>
