--- a/content/sample-category/sample-product/sample-page.mdx
+++ b/content/sample-category/sample-product/sample-page.mdx
@@ -150,11 +150,11 @@ detached_jws = makeDetachedJWS(request_body, private_key) `}
           label: "200",
           content: (
             <>
-            <Text size="small" weight="600">Type 1</Text>
+            <Text size="small" weight="600">Type 1 (open by default)</Text>
             <Card padding="nano" shape="rounded" marginBottom="micro">
-  <details>
+  <details open>
     <summary>
-                <Badge type="success">SUCCESS</Badge> Description 1
+                <Text size="medium" marginBottom="none" paddingRight="medium"><Badge type="success">SUCCESS</Badge> Description 1</Text>
     </summary>
               <hr className="tertiary" />
               <h5>Request</h5>
@@ -183,7 +183,7 @@ detached_jws = makeDetachedJWS(request_body, private_key) `}
               <Card padding="nano" shape="rounded">
   <details>
     <summary>
-                <Badge type="success">SUCCESS</Badge> Description 2
+                <Text size="medium" marginBottom="none" paddingRight="medium"><Badge type="success">SUCCESS</Badge> Description 2</Text>
     </summary>
               <hr className="tertiary" />
               <h5>Request</h5>
@@ -219,7 +219,7 @@ detached_jws = makeDetachedJWS(request_body, private_key) `}
             <Card padding="nano" shape="rounded" marginBottom="micro">
   <details>
     <summary>
-                <Badge type="failure">Failure</Badge> Failure 1
+                <Text size="medium" marginBottom="none" paddingRight="medium"><Badge type="failure">FAILURE</Badge> Failure 1</Text>
     </summary>
               <hr className="tertiary" />
               <h5>Request</h5>
@@ -248,7 +248,7 @@ detached_jws = makeDetachedJWS(request_body, private_key) `}
               <Card padding="nano" shape="rounded">
   <details>
     <summary>
-                <Badge type="failure">FAILURE</Badge> Failure 2
+                <Text size="medium" marginBottom="none" paddingRight="medium"><Badge type="failure">FAILURE</Badge> Failure 2</Text>
     </summary>
               <hr className="tertiary" />
               <h5>Request</h5>
@@ -277,4 +277,3 @@ detached_jws = makeDetachedJWS(request_body, private_key) `}
         }
       ]}
     ></Tabs>
-
